fix bug on display: inline flex (bulma) which cause text-align not working on safari

--- a/app/assets/stylesheets/bulma/elements/other.sass
+++ b/app/assets/stylesheets/bulma/elements/other.sass
@@ -135,7 +135,7 @@
   background-color: $background
   border-radius: 290486px
   color: $text
-  display: inline-flex
+  // display: inline-flex
   font-size: 12px
   height: 24px
   justify-content: center
