--- a/app/assets/stylesheets/bulma/utilities/controls.sass
+++ b/app/assets/stylesheets/bulma/utilities/controls.sass
@@ -6,7 +6,7 @@
   border: 1px solid $control-border
   border-radius: $radius
   color: $control
-  display: inline-flex
+  // display: inline-flex
   font-size: $size-normal
   height: 32px
   justify-content: flex-start
